# TechVisionCoproc

./: .cproject  .project  CMakeLists.txt  Makefile  README.md  config.h.in  configure.in  maketest.sh  testcoproc.cpp  watchdog.pl
src/: CameraManager.cpp  CameraManager.h  CommandProcessor.cpp  CommandProcessor.h  Defs.h  DiagCommand.cpp  DiagCommand.h  DummyCommand.cpp  DummyCommand.h  ImgSaveCommand.cpp  ImgSaveCommand.h  LoggingService.cpp  LoggingService.h  Makefile.am  MessageDispatcher.cpp  MessageDispatcher.h  OCVCapture.cpp  OCVCapture.h  VisionCommand.cpp  VisionCommand.h  VisionCoprocessor.cpp  config.h  testcoproc.cpp
zmq/: README
