#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
#AM_CONDITIONAL(WITH_OPENCV)

AC_PREREQ([2.63])
AC_INIT([TechVisionCoproc], [2016], [marc.lalonde@team3990.com])
AM_INIT_AUTOMAKE([foreign no-dist no-dist-gzip no-exeext no-installinfo no-installman nostdinc no-texinfo.tex no-dependencies])

AC_CONFIG_SRCDIR([src/DummyCommand.cpp])
AC_CONFIG_HEADERS([src/config.h:config.h.in])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC


AC_ARG_ENABLE(opencv,
        AS_HELP_STRING([--enable-opencv],[enable libopencv support]), [yes],
        [
                nv_opencv=1
                AC_CHECK_HEADERS([opencv/cv.h],	[], [AC_MSG_ERROR(opencv not found. please either install libopencv-dev or use the --disable-opencv option.)])
                AC_CHECK_HEADERS([opencv/highgui.h],	[], [AC_MSG_ERROR(opencv not found. please either install libopencv-dev or use the --disable-opencv option.)])
                AC_CHECK_HEADERS([opencv/cxcore.h],	[], [AC_MSG_ERROR(opencv not found. please either install libopencv-dev or use the --disable-opencv option.)])
                AC_CHECK_LIB(opencv_core, main, [], [AC_MSG_ERROR(opencv not found. please either install libopencv-dev or use the --disable-opencv option.)])
                AC_CHECK_LIB(opencv_imgproc, main, [], [AC_MSG_ERROR(opencv not found. please either install libopencv-dev or use the --disable-opencv option.)])
                AC_CHECK_LIB(opencv_highgui, main, [], [AC_MSG_ERROR(opencv not found. please either install libopencv-dev or use the --disable-opencv option.)])
	],
	[]
)


# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [main], [], [echo "Pthread library not found"
				     exit -1])
# FIXME: Replace `main' with a function in `-lrt':
AC_CHECK_LIB([rt], [main],[],[echo "Realtime Extensions library not found"
			      exit -1])
# FIXME: Replace `main' with a function in `-lv4l2':
AC_CHECK_LIB([v4l2], [main],[],[ echo "video4linux not found: no camera support"])
# FIXME: Replace `main' with a function in `-lzmq':
AC_CHECK_LIB([zmq], [main], [], [ echo "zmq library is missing..."
         exit -1])

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h  unistd.h])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
echo " Building with OpenCV support....... : $nv_opencv"
